--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ hr {
 body{
   color: white;
   font-family:sans-serif;
-  background-color: #393E46;
+  background-color: #222831;
 }
 
 h1, h2, h3 {
