Updated background and h1 -3 colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@ hr {
 body{
   color: white;
   font-family:sans-serif;
-  background-color: #222831;
+  background-color: #393E46;
 }
 
 h1, h2, h3 {
-  color: #00ADB5;
+  color: #AAD8D3;
 }
