Removed underline from a tag, adding bold changing emphasis with bold

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ h1, h2, h3 {
 
 a{
   color: #EEEEEE;
+  font-style: normal;
+  font-weight: bold;
 }:visited{
   color: #00ADB5;
+  font-weight: bold;
+  font-style: normal;
 }
