Changed colour scheme to https://colorhunt.co/palette/1a1a1b333f4437aa9c94f3e4

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a{
   font-weight: bold;
   text-decoration: none;
 }:visited{
-  color: #444F56;
+  color: #CFD2CF;
   font-weight: bold;
   text-decoration: none;
 }
