Updated index.html moving skills to another area of the page

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ a{
   font-weight: bold;
   text-decoration: none;
 }:visited{
-  color: #CFD2CF;
+  color: #7F8487;
   font-weight: bold;
   text-decoration: none;
 }
