--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ body{
   color: white;
   font-family:sans-serif;
   background-color: #1A1A1B;
+  align-content: center;
+  align-items: center;
 }
 
 h1, h2, h3 {
