--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,12 @@ body{
   color: white;
   font-family:sans-serif;
   background-color: #1A1A1B;
-  align-content: center;
-  align-items: center;
+  margin: 0;
+  text-align: center;
+}
+
+h1{
+  margin: 0px;
 }
 
 h1, h2, h3 {
@@ -27,10 +31,31 @@ a{
   text-decoration: none;
 }
 
-div.no-margin{
-  margin: 0px;
+.top-container{
+  padding: 100px 0 0;
+  width: 100%;
+  background-color: #7F8487;
 }
 
-h1{
-  margin: 0px;
+.middle-container{
+  padding: 50px 0;
+}
+
+.bottom-cloud {
+  position: absolute;
+  left: 450px;
+}
+
+.top-cloud {
+  position: absolute;
+  top: 50px;
+  right: 420px;
+}
+
+.underlined{
+  text-decoration: underline;
+}
+
+.round-frame{
+  border-radius: 50%;
 }
