--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,22 @@ body{
 }
 
 h1{
-  margin: 0px;
+  margin: 0px auto 0 auto;
+  font-size: 5rem;
+  font-family: 'Satisfy', cursive;
 }
 
 h1, h2, h3 {
   color: #94F3E4;
+}
+
+h2, h3{
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+h2{
+  margin-top: 0;
+  font-weight: normal;
 }
 
 a{
@@ -26,9 +37,20 @@ a{
   font-weight: bold;
   text-decoration: none;
 }:visited{
-  color: #7F8487;
+  color: #37AA9C;
   font-weight: bold;
   text-decoration: none;
+}
+
+.visible-link{
+  color: white;
+}
+
+.btn{
+  border-radius: 10px;
+  background-color: #37AA9C;
+  color: white;
+  padding: 10px;
 }
 
 .top-container{
@@ -39,6 +61,12 @@ a{
 
 .middle-container{
   padding: 50px 0;
+  background-color:
+}
+
+.bottom-container{
+  background-color: #4b8487;
+  padding: 20px;
 }
 
 .bottom-cloud {
@@ -58,4 +86,22 @@ a{
 
 .round-frame{
   border-radius: 50%;
+  width: 25%;
+}
+
+.skill-row{
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.float-left{
+  float: left;
+  margin-right: 30px;
+}
+
+.float-right{
+  float: right;
+  margin-left: 30px;
 }
